kubernetes/dev-env/ingresses/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: smart-hire-ops
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - minio.com
      secretName: miniosecret
  rules:
  - host: minio.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9090
